testsuite/tests/parser/should_fail/pfail007.alan
hello() : proc
  foo(f1:int  : proc
  {}
{
}
