testsuite/tests/parser/should_fail/pfail007.stderr
pfail007.alan:2:15: Error: Parse error on input `:'
	Probably unclosed `)'

